# test_nix_tensorflow_m1-

./: .gitignore  README.md  flake.nix
nix/: checks.nix  process-compose.nix  schema.sql  shell.nix
services/backend/: default.nix  package.nix
services/backend/code/: .pdm-python  pyproject.toml  smoketest_tensorflow.py
services/frontend/: default.nix
