[project]
name = "code"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrea Ciceri", email = "andrea.ciceri@autistici.org"},
]
dependencies = [
    "tensorflow==2.16.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
